--- a/TFG_Projects_APP_Frontend/Pages/MainPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/MainPage.xaml
@@ -30,8 +30,8 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="models:Project">
                             <Border Padding="5">
-                                <StackLayout Orientation="Horizontal">
-                                    <StackLayout Padding="10">
+                                <StackLayout Orientation="Horizontal" Spacing="10">
+                                    <StackLayout Padding="10" HorizontalOptions="StartAndExpand">
                                         <StackLayout Orientation="Horizontal" Spacing="8">
                                             <Label FontSize="16" Text="{Binding Id}" />
                                             <Label FontSize="16" Text="{Binding Title}" />
@@ -41,10 +41,12 @@
                                     <Button
                                         Command="{Binding ProjectDeleteCommand, Source={RelativeSource AncestorType={x:Type pageModels:MainPageModel}}}"
                                         CommandParameter="{Binding .}"
+                                        HorizontalOptions="End"
                                         Text="Delete" />
                                     <Button
                                         Command="{Binding ProjectEditCommand, Source={RelativeSource AncestorType={x:Type pageModels:MainPageModel}}}"
                                         CommandParameter="{Binding .}"
+                                        HorizontalOptions="End"
                                         Text="Edit" />
                                 </StackLayout>
                             </Border>
